--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,7 +6,7 @@
  <div class="span12" style="margin-top: 1em; margin-left: 30px;">
   <form>
     <input type="number" id="velocity" placeholder="Velocity" />
-    <input type="number" id="stories" placeholder="Stores" />
+    <input type="number" id="stories" placeholder="Stories" />
     <input type="button" id="stats-btn" value="Get Estimates!" />
   </form>
 </div>
