--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,17 +1,30 @@
 <html>
 <head>
+  <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
+  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+  <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+  <script src="interface.js"></script>
   <title>Agile Estimate</title>
 </head>
+
 <body>
- <div class="span12" style="margin-top: 1em; margin-left: 30px;">
   <form>
-    <input type="number" id="velocity" placeholder="Velocity" />
-    <input type="number" id="stories" placeholder="Stories" />
+
+    <div class="velocity">
+      <input type="number" id="velocity" placeholder="Velocity" />
+      <div class="velocity-slider"></div>
+    </div>
+
+    <div class="stories">
+      <input type="number" id="stories" placeholder="Stories" />
+      <div class="stories-slider"></div>
+    </div>
+
     <input type="button" id="stats-btn" value="Get Estimates!" />
   </form>
-</div>
-<div id="results"></div>
-<script type="text/javascript" src="./estimate.js"></script>
+  <div id="results"></div>
+
+  <script type="text/javascript" src="./estimate.js"></script>
 </body>
 </html>
 
